--- a/raisons-commencer-blog/index.html
+++ b/raisons-commencer-blog/index.html
@@ -13,10 +13,10 @@
 
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
 
-<link rel="stylesheet" type="text/css" href="https://www.bygga.fr/assets/css/bootstrap-theme.min.css">
+
+
 <link rel="stylesheet" type="text/css" href="https://www.bygga.fr/assets/css/theme.css">
 <link rel="stylesheet" type="text/css" href="https://www.bygga.fr/assets/css/theme-responsive.css">
 
@@ -152,7 +152,7 @@ Voici cinq raisons que je donne pour vous montrer que c&rsquo;est aussi grand te
 
 <p>S&rsquo;ils viennent sur votre blog, c&rsquo;est parce qu&rsquo;ils sont intéressés par l&rsquo;article et il y a donc de grandes chances qu&rsquo;ils soient intéressés par vos produits ou services.</p>
 
-<h2 id="5-les-blogs-comme-centre-d-un-communauté:2cf5a1efeac7d8d78f75fe44583df912">5. Les blogs comme centre d&rsquo;un communauté</h2>
+<h2 id="5-les-blogs-comme-centre-d-une-communauté:2cf5a1efeac7d8d78f75fe44583df912">5. Les blogs comme centre d&rsquo;une communauté</h2>
 
 <p><img src="https://www.bygga.fr/assets/img/services-reseaux-sociaux.png" class="alignright" />
 Vous pouvez facilement construire une communauté autour d&rsquo;un blog. De nombreuses personnes s&rsquo;inscrivent au flux RSS des blogs pour être au courant des nouveaux articles et ne pas manquer une miette sur vos voyages, nouvelles expériences ou bien vos conseils.</p>
@@ -213,10 +213,12 @@ Si vous êtes du genre à ne pas savoir quoi de vos dimanches après-midi, un bl
                         <div class="row m0">
                             <h4 class="title">Restez connectés</h4>
                             <div class="row m0 body">
-                                <ul class="nav socials">
-                                    <li><a href="https://www.twitter.com/byggafr"><i class="fa fa-twitter"></i></a></li>
-                                    <li><a href="https://plus.google.com/108114307663152479070"><i class="fa fa-google-plus"></i></a></li>
-                                    <li><a href="http://feeds.feedburner.com/bygga/nUsS"><i class="fa fa-rss"></i></a></li>
+                                <ul class="list-unstyled links">
+                                    <li><a href="https://www.twitter.com/byggafr">
+                                    Twitter</a></li>
+                                    <li><a href="https://plus.google.com/108114307663152479070">Google+</a></li>
+                                    <li><a href="http://feeds.feedburner.com/bygga/nUsS">RSS</a></li>
+                                    <li><a href="https://www.bygga.fr/contact/">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -226,10 +228,10 @@ Si vous êtes du genre à ne pas savoir quoi de vos dimanches après-midi, un bl
                             <h4 class="title">Outils pour r&eacute;ssir</h4>
                             <div class="row m0 body">
                                 <ul class="list-unstyled links">
-                                    <li class="fa fa-caret-right"><a href="https://www.bygga.fr/creer-blog-gratuitement/">Créer un blog</a></li>
-                                    <li class="fa fa-caret-right"><a href="https://www.bygga.fr/tags/Wordpress/">WordPress</a></li>
-                                    <li class="fa fa-caret-right"><a href="https://affiliation.lws-hosting.com/statistics/click/47/0" rel="nofollow">Hébergement</a></li>
-                                    <li class="fa fa-caret-right"><a href="https://affiliation.lws-hosting.com/statistics/click/50/0" rel="nofollow">Nom de domaine</a></li>
+                                    <li><a href="https://www.bygga.fr/creer-blog-gratuitement/">Créer un blog</a></li>
+                                    <li><a href="https://www.bygga.fr/tags/Wordpress/">WordPress</a></li>
+                                    <li><a href="https://affiliation.lws-hosting.com/statistics/click/47/0" rel="nofollow">Hébergement</a></li>
+                                    <li><a href="https://affiliation.lws-hosting.com/statistics/click/50/0" rel="nofollow">Nom de domaine</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -276,6 +278,16 @@ Si vous êtes du genre à ne pas savoir quoi de vos dimanches après-midi, un bl
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script> 
 <script src="https://www.bygga.fr/assets/js/main.min.js"></script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-15905346-20', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
 </body>
 </html>
