--- a/analyse-web/index.html
+++ b/analyse-web/index.html
@@ -137,7 +137,7 @@
                     <input type="text" class="form-control" name="email" required>
                 </div>
             </div>
-            <input type="hidden" name="_next" value="//site.io/thanks.html" />
+            <input type="hidden" name="_next" value="/analyse-web-merci/" />
             <input type="text" name="_gotcha" style="display:none" />
             <div class="col-sm-12 text-center">
                 <button class="borderred_link" type="submit"><span>Faire l'analyse !</span></button>
