--- a/contact-merci/index.html
+++ b/contact-merci/index.html
@@ -6,8 +6,8 @@
 
 <title>Bygga</title>
 
-<meta name="description" content="Formulaire pour contacter l&#39;équipe de Bygga.fr">
-<link rel="canonical" href="https://www.bygga.fr/contact/" />
+
+<link rel="canonical" href="https://www.bygga.fr/contact-merci/" />
 
 <link href="https://www.bygga.fr/feed.xml" type="application/atom+xml" rel="alternate" title="Bygga Feed">
 
@@ -97,35 +97,17 @@
         <article>
             <header class="section-spacing title-banner text-center">
                 <div class="container">
-                    <h1>Nous contacter</h1>
+                    <h1>Email envoyé</h1>
                 </div>
             </header>
             <section class="container">
                 <div class="row">
                     <div class="col-sm-2"></div>
                     <div class="col-sm-8 content">
-                        <p>Vous pouvez contacter bygga.fr en utilisant le formulaire ci-dessous.
-<form action="//formspree.io/sbrunet3@gmail.com" method="POST" class="row m0 contact_form" id="contactForm">
-    <div class="col-sm-12">
-        <div class="row m0">
-            <label for="siteweb">Votre message</label>
-            <textarea name="message" class="form-control" required></textarea>
-        </div>
-    </div>
-    <div class="col-sm-12">
-        <div class="row m0">
-            <label for="email">Votre email pour la réponse</label>
-            <input type="text" class="form-control" name="email" required>
-        </div>
-    </div>
-    <input type="hidden" name="_next" value="/contact-merci/" />
-    <input type="text" name="_gotcha" style="display:none" />
-    <div class="col-sm-12 text-center">
-        <button class="borderred_link" type="submit"><span>Envoyer</span></button>
-    </div><br />
-</form></p>
+                        <p>Merci pour votre message.
+Nous allons y répondre sans plus tarder.</p>
 
-<p>Vous pouvez nous contacter si vous avez des questions a propos de ce site ou bien si vous souhaitez mettre en place un partenariat.</p>
+<p>En attendant vous pouvez visiter notre site pour découvrir comment améliorer votre site internet.</p>
 
                     </div>
                 </div>
