Article "Afficher sous catégorie wordpress"

--- a/article/index.html
+++ b/article/index.html
@@ -106,6 +106,15 @@
                     
                         <article class="article-summary">
 	<div class="post_text">
+		<a href="https://www.bygga.fr/afficher-sous-categorie-wordpress/" class="post_title">
+	    	<h3>Comment afficher les sous-catégories dans WordPress</h3>
+		</a>
+	Voici comment afficher les catégorie et sous-catégories de vos articles sur la plateforme WordPress
+	</div>
+</article>
+                    
+                        <article class="article-summary">
+	<div class="post_text">
 		<a href="https://www.bygga.fr/monetiser-gagner-argent-siteweb/" class="post_title">
 	    	<h3>Comment vraiment gagner de l&#39;argent avec un site web</h3>
 		</a>
